sets fp-header and appcomponent: styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h2>Hello !</h2>
-<p>Consequat dolore sunt non sit anim pariatur dolor velit eiusmod voluptate sunt. Eiusmod aliquip consequat esse commodo consequat eiusmod et nostrud cillum dolore dolore eiusmod. Aliquip ad dolor do minim. Voluptate irure non reprehenderit aliquip magna do culpa nostrud ad eu in. Officia occaecat in aute adipisicing veniam ut nulla eiusmod et incididunt nostrud. Aute enim sunt esse aute aliqua incididunt. Officia deserunt magna eiusmod incididunt id sit in.</p>
+<div class="fp-container">
+  <app-fp-header></app-fp-header>
 
-<app-at-formini></app-at-formini>
+</div>
