--- a/src/app/fp-header/fp-header.component.html
+++ b/src/app/fp-header/fp-header.component.html
@@ -1,3 +1,5 @@
-<p>
-  fp-header works!
-</p>
+<header>
+  <h2>F-Play</h2>
+  <p>A loseless way to act</p>
+  <input placeholder="Search" type="text">
+</header>
