sets fp-footer: styles

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,13 @@
 .fp-container {
+  position: relative;
   width: 651px;
   box-shadow: 0 0 12px rgba(0,0,0,.16);
   margin: 5vh auto;
   height: 90vh;
+}
+
+app-fp-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
