sets fp-play-item: none stars

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="fp-container">
   <app-fp-header></app-fp-header>
+  <app-fp-play></app-fp-play>
   <app-fp-footer></app-fp-footer>
 </div>
