--- a/src/app/fp-play-item/fp-play-item.component.css
+++ b/src/app/fp-play-item/fp-play-item.component.css
@@ -26,3 +26,13 @@ p {
   color: #5E6061;
   padding: 5px;
 }
+
+.fp-item-stars {
+  display: flex;
+  padding-left: 5px;
+}
+
+.fp-item-stars img {
+  width: auto;
+  height: 15px;
+}
