--- a/src/app/fp-play-item/fp-play-item.component.html
+++ b/src/app/fp-play-item/fp-play-item.component.html
@@ -1,6 +1,10 @@
 <div class="fp-container">
   <img src="assets/microphone-1209816_1920.jpg">
   <h3>Nulla non proident veniam est ad esse ex aute.</h3>
-  <p>//stars list</p>
+  <div class="fp-item-stars">
+    <img src="assets/icons/svg/002-star-1.svg">
+    <img src="assets/icons/svg/002-star-1.svg">
+    <img src="assets/icons/svg/002-star-1.svg">
+  </div>
   <p>Nulla sit ut velit sunt elit tempor incididunt quis. Mollit nisi magna ut tempor anim ...</p>
 </div>
