--- a/src/app/fp-play/fp-play.component.html
+++ b/src/app/fp-play/fp-play.component.html
@@ -1,3 +1,8 @@
 <div class="fp-container">
   <app-fp-play-item></app-fp-play-item>
+  <app-fp-play-item></app-fp-play-item>
+  <app-fp-play-item></app-fp-play-item>
+  <app-fp-play-item></app-fp-play-item>
+  <app-fp-play-item></app-fp-play-item>
+  <app-fp-play-item></app-fp-play-item>
 </div>
