--- a/src/app/fp-play-item/fp-play-item.component.html
+++ b/src/app/fp-play-item/fp-play-item.component.html
@@ -1,6 +1,6 @@
 <div class="fp-container">
   <img src="assets/microphone-1209816_1920.jpg">
-  <h3>Nulla non proident veniam est ad esse ex aute.</h3>
+  <h3>Nulla non proident ve...</h3>
   <div class="fp-item-stars">
     <img src="assets/icons/svg/002-star-1.svg">
     <img src="assets/icons/svg/002-star-1.svg">
